--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -12,6 +12,7 @@
 		<%= stylesheet_link_tag 'dashboard', media: 'all', 'data-turbolinks-track' => false %>
 		<%= javascript_include_tag 'incidents', 'data-turbolinks-track' => false %>
 		<%= javascript_include_tag 'companies', 'data-turbolinks-track' => false %>
+		<%= javascript_include_tag 'branches', 'data-turbolinks-track' => false %>
 		<%= javascript_include_tag 'dashboard', 'data-turbolinks-track' => false %>
 		<%= csrf_meta_tags %>
 
