--- a/app/views/branches/new.html.erb
+++ b/app/views/branches/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New branch</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', branches_path %>
+<section class="content">
+  <div class="row">
+    <div class="col-lg-8">
+      <h1>
+        Branch
+        <small>Add a new branch for your company</small>
+      </h1>
+      <%= render 'form' %>
+    </div>
+  </div>
+</section>
