--- a/app/views/attendees/show.html.erb
+++ b/app/views/attendees/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @attendee.user %>
+  <strong>Contact:</strong>
+  <%= @attendee.contact %>
 </p>
 
 <%= link_to 'Edit', edit_attendee_path(@attendee) %> |
