--- a/app/views/dashboard/_left_side_menu.html.erb
+++ b/app/views/dashboard/_left_side_menu.html.erb
@@ -1,7 +1,7 @@
 <aside class="left-side sidebar-offcanvas">
       <section class="sidebar">
-        <!-- Sidebar user panel -->
-        <div class="user-panel">
+        <!-- Sidebar contact panel -->
+        <div class="contact-panel">
           <div class="image">
             <%= image_tag "/assets/missing.jpg", class: "img-circle" %>
           </div>
@@ -30,7 +30,7 @@
           </li>
           <!-- <li class="treeview">
             <a href="">
-              <i class="fa fa-users"></i>
+              <i class="fa fa-contacts"></i>
               <span>Staff</span>
               <i class="fa fa-angle-left pull-right"></i>
             </a>
