--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>User:</strong>
-  <%= @device.user %>
+  <strong>Contact:</strong>
+  <%= @device.contact %>
 </p>
 
 <p>
