--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>User:</strong>
-  <%= @notification.user %>
+  <strong>Contact:</strong>
+  <%= @notification.contact %>
 </p>
 
 <p>
