--- a/app/views/attendees/_form.html.erb
+++ b/app/views/attendees/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :event_id %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+    <%= f.label :contact_id %><br>
+    <%= f.text_field :contact_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
