--- a/app/views/dashboard/_top_nav.html.erb
+++ b/app/views/dashboard/_top_nav.html.erb
@@ -28,8 +28,8 @@
                       <li><!-- Task item -->
                         <a href="<%= incident_path(incident) %>">
                           <h3>
-                            <% if !incident.user.nil? %>
-                              <%= incident.user.name %>
+                            <% if !incident.contact.nil? %>
+                              <%= incident.contact.name %>
                             |
                             <% end %>
                             <%= incident.incident_type %>
@@ -78,7 +78,7 @@
                     <div class="row">
                       <div class="col-lg-3">
                         <p class="text-center">
-                          <img src="img/user.jpg" class="img-responsive img-circle">
+                          <img src="img/contact.jpg" class="img-responsive img-circle">
                         </p>
                       </div>
                       <div class="col-lg-9">
