--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
+      <th>Contact</th>
       <th>Registration</th>
       <th colspan="3"></th>
     </tr>
@@ -12,7 +12,7 @@
   <tbody>
     <% @devices.each do |device| %>
       <tr>
-        <td><%= device.user %></td>
+        <td><%= device.contact %></td>
         <td><%= device.registration_id %></td>
         <td><%= link_to 'Show', device %></td>
         <td><%= link_to 'Edit', edit_device_path(device) %></td>
