--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -42,8 +42,8 @@
                               <i class="entypo-location"></i>
                           </div>
                           <div class="timeline-label">
-                              <h2><a href="<%= incident_path(inc) %>"><%= inc.user.name %></a> <span> sent this alert at <%= time_formatter(inc.created_at) %></span> </h2>
-                              <blockquote><%= inc.user.phone_number %></blockquote>
+                              <h2><a href="<%= incident_path(inc) %>"><%= inc.contact.name %></a> <span> sent this alert at <%= time_formatter(inc.created_at) %></span> </h2>
+                              <blockquote><%= inc.contact.phone_number %></blockquote>
                               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63245.97055414073!2d110.37484495!3d-7.803250449999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5787bd5b6bc5%3A0x21723fd4d3684f71!2sYogyakarta%2C+Yogyakarta+City%2C+Yogyakarta%2C+Indonesia!5e0!3m2!1sen!2s!4v1406473799982" width="100%" height="450" frameborder="0" style="border:0"></iframe> -->
                           </div>
                       </div>
