--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
+      <th>Contact</th>
       <th>Group</th>
       <th>Notification type</th>
       <th colspan="3"></th>
@@ -13,7 +13,7 @@
   <tbody>
     <% @notifications.each do |notification| %>
       <tr>
-        <td><%= notification.user %></td>
+        <td><%= notification.contact %></td>
         <td><%= notification.group %></td>
         <td><%= notification.notification_type %></td>
         <td><%= link_to 'Show', notification %></td>
