updated all the tables that had user_id to have contact_id instead, changed all references to account to user

--- a/app/views/dashboard/_side_nav.html.erb
+++ b/app/views/dashboard/_side_nav.html.erb
@@ -22,7 +22,7 @@
     <div class="menu">
       <a class="item"><i class="edit icon"></i> Edit Profile</a>
       <a class="item"><i class="globe icon"></i> Choose Language</a>
-      <a class="item"><i class="settings icon"></i> Account Settings</a>
+      <a class="item"><i class="settings icon"></i> User Settings</a>
     </div>
   </div>
 </div>
