--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,7 +20,7 @@
         <li><a href="#featureWrap">Features</a></li>
         <li><a href="#productWrap">The App</a></li>
         <li><a href="#contactWrap">Contact Us</a></li>
-        <% if !account_signed_in? %>
+        <% if !user_signed_in? %>
           <li><a href="#" id="signup-link" data-toggle = "modal" data-target = "#signup_modal">Sign Up</a></li>
           <li><a href="#" id="signin-link" data-toggle = "modal" data-target = "#signin_modal">Sign In</a></li>
         <% else %>
