--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,6 +24,7 @@
           <li><a href="#" id="signup-link" data-toggle = "modal" data-target = "#signup_modal">Sign Up</a></li>
           <li><a href="#" id="signin-link" data-toggle = "modal" data-target = "#signin_modal">Sign In</a></li>
         <% else %>
+          <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
           <li><%= link_to "Map", map_path %></li>
         <% end %>
       </ul>
