added way to create new categories, relate article with category

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -37,10 +37,10 @@
             Article Settings
           </h3>
           <label>Category</label>
-          <select class="form-control">
+          <select class="form-control" name="article[category_id]">
             <% Category.all.each do |c| %>
-              <option name="article[category]" value="<%= c.id %>">
-
+              <option value="<%= c.id %>">
+              <%= c.name %>
               </option>
             <% end %>
           </select>
