--- a/app/views/dashboard/blog.html.erb
+++ b/app/views/dashboard/blog.html.erb
@@ -50,6 +50,11 @@
                                 New Article
                             </i>
                         </a>
+                        <a data-target="#category_modal" class="btn btn-default dropdown-toggle" data-toggle="modal" href="#" id="add-category">
+                            <i class="fa fa-plus">
+                                Add Category
+                            </i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -129,6 +134,35 @@
               <button class="btn btn-danger" type="submit">
                 <i class="fa fa-trash-o"></i>
                 Delete
+              </button>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
+    <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="category_modal" role="dialog" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title" id="myModalLabel">Add Category</h4>
+          </div>
+          <%= form_tag add_category_path do |f| %>
+            <div class="modal-body">
+              <label id="lbl-msg"></label>
+              <input type="text" class="form-control" name="name">
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-default" data-dismiss="modal" type="button">
+                <i class="fa fa-times"></i>
+                Cancel
+              </button>
+              <button class="btn btn-success" type="submit">
+                <i class="fa fa-check"></i>
+                Send
               </button>
             </div>
           <% end %>
