add a feature image to article when creating or editing

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -45,6 +45,11 @@
             <% end %>
           </select>
           <br />
+          <div>
+            <label>Feature Image</label>
+            <%= f.file_field :feature_image %>
+          </div>
+          <br />
           <div class="checkbox">
               <label>
                   <input type="checkbox" checked="" name="article[published]"> Publish
