blog styles, search, categories....

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -17,7 +17,7 @@
         <!-- PAGE CONTENT -->
         <div id="page-content">
           <!-- Posts -->
-          <% Article.all.each do |article| %>
+          <% @articles.each do |article| %>
             <div class="post">
               <h1><%= link_to article.title, article_path(article) %></h1>
               <!-- meta -->
