--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -18,7 +18,7 @@
     <script type="text/javascript">
     $(document).ready(function() {
       if (window.location.pathname == "/map") {
-        $('#nav-link').html('<a href="/dashboard/index"><i class="fa fa-dashboard"></i> Dashboard</a>').addClass("logo");
+        $('#nav-link').html('<a href="/dashboard"><i class="fa fa-dashboard"></i> Dashboard</a>').addClass("logo");
       };
       // run the first time; all subsequent calls will take care of themselves
       setTimeout(executeQuery, 5000);
